# thesis--news-preparation

./: .gitignore  playground.ipynb  pyproject.toml  word2vec_gensim.ipynb  word2vec_selfmade.ipynb
lib/: data.py  text_preprocessing.py  vocabulary.py  word2vec_gensim.py
tests/: test_vocabulary.py
