[tool.poetry]
name = "thesis--news-preparation"
version = "0.1.0"
description = "Analyzes and prepares collected news data from ARD Teletext and from Spiegel Online."
authors = ["Michael Wellner"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
